js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-if-braceless-import-source-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
if
(
true
)
import
.
source
(
)
;
